--- a/Unroll2/Base.lproj/Main.storyboard
+++ b/Unroll2/Base.lproj/Main.storyboard
@@ -175,7 +175,11 @@
                             </connections>
                         </barButtonItem>
                         <barButtonItem style="plain" systemItem="flexibleSpace" id="ZkF-Mv-9Hq"/>
-                        <barButtonItem systemItem="trash" id="5xp-wP-xfs"/>
+                        <barButtonItem systemItem="trash" id="5xp-wP-xfs">
+                            <connections>
+                                <action selector="deleteCurrentPhoto:" destination="auB-ij-Inv" id="uea-Ch-xWm"/>
+                            </connections>
+                        </barButtonItem>
                     </toolbarItems>
                     <navigationItem key="navigationItem" id="ySI-BV-izL"/>
                 </pageViewController>
